--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section id="hero">
         <div class="container hero-content">
-            <h1>Innovación y Tecnología para un Futuro Digital</h1>
+            <h1 class="resaltar">Innovación y Tecnología para un Futuro Digital</h1>
             <p>En Multitechnew, convertimos ideas complejas en soluciones tecnológicas elegantes y funcionales que impulsan el crecimiento de tu negocio.</p>
             <a href="#portafolio" class="cta-button">Ver Nuestros Proyectos</a>
         </div>
@@ -42,7 +42,7 @@
 
     <section id="servicios">
         <div class="container">
-            <h2>Nuestros Servicios</h2>
+            <h2 class="resaltar">Nuestros Servicios</h2>
             <div class="services-grid">
                 <div class="service-card">
                     <div class="icon">💻</div>
@@ -65,7 +65,7 @@
 
     <section id="portafolio">
         <div class="container">
-            <h2>Proyectos Destacados</h2>
+            <h2 class="resaltar">Proyectos Destacados</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=2070&auto=format&fit=crop" alt="Proyecto 1">
@@ -94,7 +94,7 @@
 
     <section id="nosotros">
         <div class="container" style="text-align: center; max-width: 800px;">
-            <h2>Sobre Multitechnew</h2>
+            <h2 class="resaltar">Sobre Multitechnew</h2>
             <p style="color: var(--color-text-secondary); font-size: 1.1rem;">
                 Somos un equipo de desarrolladores, diseñadores y estrategas apasionados por la tecnología. Nuestra misión es ayudar a las empresas a navegar el paisaje digital con soluciones innovadoras y personalizadas. Creemos en el poder de un buen diseño y un código limpio para transformar negocios.
             </p>
@@ -103,7 +103,7 @@
     
     <section id="contacto">
         <div class="container">
-            <h2>Hablemos de tu Proyecto</h2>
+            <h2 class="resaltar">Hablemos de tu Proyecto</h2>
             <form class="contact-form">
                 <input type="text" name="name" placeholder="Tu Nombre" required>
                 <input type="email" name="email" placeholder="Tu Correo Electrónico" required>
